# tvfamily-gtk

./: .gitignore  README  autogen.sh  configure.ac
data/: styles.css
src/: Makefile.am  animatedbutton.cpp  animatedbutton.h  barview.cpp  barview.h  core.c  core.cpp  core.h  coretypes.c  coretypes.cpp  coretypes.h  curl.cpp  curl.h  main.c  main.cpp  mainwindow.h  mediainfoview.cpp  mediainfoview.h  mediasview.c  mediasview.cpp  mediasview.h  menubar.cpp  menubar.h  newprofileview.c  newprofileview.cpp  newprofileview.h  paths.c  paths.cpp  paths.h  pictureview.c  pictureview.cpp  pictureview.h  playerview.cpp  playerview.h  profilebutton.cpp  profilebutton.h  profilebuttonlistener.h  profilepicturelistener.h  profilesbox.cpp  profilesbox.h  (+33 more)
test/: run.sh
tvfamilygtk/: core.py  gui.py  paths.py  widgets.py
