
bin_PROGRAMS = tvfamily-gtk

tvfamily_gtk_SOURCES = \
    animatedbutton.cpp \
    animatedbutton.h \
    barview.cpp \
    barview.h \
    core.cpp \
    core.h \
    curl.cpp \
    curl.h \
    main.cpp \
    mediainfoview.cpp \
    mediainfoview.h \
    mediasview.cpp \
    mediasview.h \
    menubar.cpp \
    menubar.h \
    newprofileview.cpp \
    newprofileview.h \
    paths.cpp \
    paths.h \
    pictureview.cpp \
    pictureview.h \
    playerview.cpp \
    playerview.h \
    profilebutton.cpp \
    profilebutton.h \
    profilebuttonlistener.h \
    profilepicturelistener.h \
    profilesbox.cpp \
    profilesbox.h \
    profileslistener.h \
    profilesrequest.cpp \
    profilesrequest.h \
    profilesresult.cpp \
    profilesresult.h \
    profilesview.cpp \
    profilesview.h \
    question.cpp \
    question.h \
    request.cpp \
    request.h \
    requestmanager.cpp \
    requestmanager.h \
    requestresult.cpp \
    requestresult.h \
    splashview.cpp \
    splashview.h \
    view.cpp \
    view.h \
    viewcontroller.cpp \
    viewcontroller.h \
    viewcontrollerinterface.h \
    viewswitchdata.h

tvfamily_gtk_CXXFLAGS = -std=c++17 ${gtkmm_CFLAGS} ${libcurl_CFLAGS} ${jansson_CFLAGS} -fext-numeric-literals
tvfamily_gtk_LDADD = ${gtkmm_LIBS} ${libcurl_LIBS} ${jansson_LIBS} -lstdc++fs

